# CSCI-455-Projects

./: README.md
EC/: CMakeLists.txt  Makefile  README  ecListFuncs.cpp  ecListFuncs.h  ectest.cpp
PA1/src/: Bar.java  CoinSimComponent.java  CoinSimViewer.java  CoinTossSimulator.java  CoinTossSimulatorTester.java
PA2/src/: Polynomial.java  PolynomialCalculator.java  PolynomialTester.java  README
PA3/src/: Maze.java  MazeComponent.java  MazeCoord.java  MazeFrame.java  MazeTester.java  MazeViewer.java  README
PA4/: aChristmasCarolOUT.txt  bludogOut.txt  bluedogOut.txt  bluedogOut2.txt  integrityOUT.txt
PA4/src/: GenText.java  Prefix.java  README  RandomTextGenerator.java  Tester.java
PA5/: CMakeLists.txt  README  Table.cpp  Table.h  concord.cpp  grades.cpp  listFuncs.cpp  listFuncs.h  pa5list.cpp
